fixed message box, on user profile page that was stuck in a grid view

--- a/public/styles/user-profile.css
+++ b/public/styles/user-profile.css
@@ -92,7 +92,7 @@ body {
 }
 
 .messages-container {
-  width: 100%;
+  width: 65%;
   display: flex;
   flex-direction: column;
 }
